                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 04-07-2006 added: Support for UPnP Media Servers auto-discovery. No need to specify IP address of host in sources.xml. No need to use the SsdpProxy program anymore.
 - 04-07-2006 changed: Network Setup now uses UPnP auto-discovery.
 - 04-07-2006 changed: Speed improvements on all skin setting retrieval.  Removed not completely working Skin.CompareString() and replaced with Skin.String(name,value) to do comparisons.  Also extended Skin.SetBool(name,value) to take true or false as a parameter.
 - 03-07-2006 fixed: Video & Picture titles for UPnP is now displaying actual text
 - 03-07-2006 fixed: Compiler settings for debug lipPlatinumd was wrong causing crashes in debug build with debug libs
 - 03-07-2006 fixed: some quicktime external dll's where broken since 26-06-2006
 - 03-07-2006 changed: made loadlibrary return base address of dll instead of pointer to xbmc dllloader structure.
 - 03-07-2006 added: some more emulation needed for the coreavc codec (still not entirely there)
 - 03-07-2006 fixed: during movie calibration, on a pal system, there would be one additional mode available identical to other (pal16:9 if widescreen is supported pal4:3 if not)
 - 03-07-2006 added: Additional filenames to try when searching for music thumbs - declared in AdvancedSettings.xml 
 - 03-07-2006 changed: use alternate time calculation for dvdplayer if ffmpeg gives us negative duration
 - 03-07-2006 changed: builtin skin.theme now uses delayed skin loading bumping the usability somewhat.
 - 03-07-2006 changed: ignore "the" when sorting now applies to programs.
 - 03-07-2006 fixed: Fixed WMC not being detected right away